--- a/registro.html
+++ b/registro.html
@@ -66,11 +66,11 @@
       </div>
       <div class="mb-4">
         <label for="passrord" class="form-label"> Password</label>
-        <input type="text" class="form-control" name="Password" id="registro-password-1" required>
+        <input type="password" class="form-control" name="Password" id="registro-password-1" required>
       </div>
       <div class="mb-4">
         <label for="passrord" class="form-label"> Password</label>
-        <input type="text" class="form-control" name="Password" id="registro-password-2" required>
+        <input type="password" class="form-control" name="Password" id="registro-password-2" required>
       <!-- Verificación de contraseñas -->
       <div id="error" class="alerta-msg-red" role="alert"></div>
       <div id="ok" class="alerta-msg-green" role="alert"></div>
